--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>fr.wseduc</groupId>
   <artifactId>mod-zip</artifactId>
-  <version>3.0-objectstorage-SNAPSHOT</version>
+  <version>3.0-SNAPSHOT</version>
 
   <properties>
     <web-utils.version>3.1-SNAPSHOT</web-utils.version>
