--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
   <groupId>fr.wseduc</groupId>
   <artifactId>mod-zip</artifactId>
-  <version>3.1.0</version>
+  <version>3.1-SNAPSHOT</version>
 
   <properties>
-    <web-utils.version>3.1.1</web-utils.version>
+    <web-utils.version>3.1-SNAPSHOT</web-utils.version>
     <jacksonDatabindVersion>2.15.2</jacksonDatabindVersion>
   </properties>
 
