--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
   <parent>
     <groupId>io.edifice</groupId>
     <artifactId>app-parent</artifactId>
-    <version>1.0.1</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
 
   <groupId>fr.wseduc</groupId>
   <artifactId>mod-zip</artifactId>
-  <version>3.1-SNAPSHOT</version>
+  <version>3.1-zookeeper-SNAPSHOT</version>
 
   <properties>
-    <web-utils.version>3.2-SNAPSHOT</web-utils.version>
+    <web-utils.version>3.2-zookeeper-SNAPSHOT</web-utils.version>
     <jacksonDatabindVersion>2.15.2</jacksonDatabindVersion>
   </properties>
 
